journal/frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: frontend-ingress
spec:
  rules:
  - http:
      paths:
        path: /api
        backend:
          serviceName: frontend
          servicePort: 8080
